--- a/HTML/lesson6/gg.css
+++ b/HTML/lesson6/gg.css
@@ -38,7 +38,7 @@ body{
     margin-left: 60px;
 }
 .nav-item a:hover{
-    color: orangered;
+    color: black;
 }
 .info_block{
     padding-top: 240px;
