--- a/HTML/lesson12/gg.css
+++ b/HTML/lesson12/gg.css
@@ -1,60 +1,17 @@
-.container{
- display: flex;
-color: white;
-font-size: 50px;
+p {}
 
-}
-p{
-    width: 463px;
-    height: 90px;
-    background-color:blue;
-    display: flex;
-    align-items: center; 
-    margin-block-start: auto;
-    margin-block-end: 20px;
-}
-.container1{
-    height: 600px;
-    width: 800px;
-    display: flex;
-    justify-content: space-evenly;
-    border: 1px solid;
-    background-color: green;
-    margin-block-end: 30px;
-    flex-wrap: wrap;
-    color: white;
-    font-size: 50px;
-   
+header {}
 
-    
-}
-.p1{
-    width: 80px;
-    min-height: 80px;
-    background-color:rgb(25, 174, 25);
-    color: white;
-    font-size: 25px;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    margin:50px;
-    min-width: 90px;
-    
-}
+header p {}
 
-.container2{
-    display: flex;
-    color: white;
-    font-size: 50px;
+main {}
 
-}
-.p2{
-    width: 463px;
-    height: 90px;
-    background-color:blue;
-    display: flex;
-    align-items: center; 
-    margin-block-start: auto;
-    margin-block-end: 0px;
+main p {}
 
-}
+main .items {}
+
+main .items div {}
+
+footer {}
+
+footer p {}
