--- a/HTML/lesson14/gg.css
+++ b/HTML/lesson14/gg.css
@@ -1,4 +1,8 @@
-
+body{
+    height: 100vh;
+    display: grid;
+    place-content: center;
+}
 .div1, .div2, .div3,.div4{
     display: inline-block;
     width: 100px;
