--- a/HTML/lesson17/gg.css
+++ b/HTML/lesson17/gg.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    
 }
 
 body {
@@ -10,90 +9,103 @@ body {
     display: grid;
     place-content: center;
 }
+
+section h1 {
+    color: white;
+    font-size: 50px;
+    background-color: rgb(58, 88, 209);
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
 .container {
-    
     width: 700px;
     height: 600px;
     padding: 60px;
     background-color: rgb(58, 88, 209);
     justify-content: space-around;
     align-items: center;
-    display: flex; 
+    display: flex;
 }
+
 .box1 {
     background-color: rgb(253, 107, 107);
     width: 120px;
     height: 120px;
     -moz-border-radius: 60px;
     -webkit-border-radius: 60px;
-    border-radius: 60px; 
-    animation-name:box;  
-    animation-duration: 2s; 
+    border-radius: 60px;
+    animation-name: box;
+    animation-duration: 2s;
     animation: box1 2s ease 0.3s infinite;
-    
-   
 }
 
 .box2 {
     width: 0;
-	height: 0;
-	border-left: 50px solid transparent;
-	border-right: 50px solid transparent;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
     border-bottom: 100px solid rgb(89, 186, 221);
-    animation-name:box2;  
-    animation-duration: 2s; 
-    animation: box2 2s ease 0.3s infinite;    
+    animation-name: box2;
+    animation-duration: 2s;
+    animation: box2 2s ease 0.3s infinite;
 }
 
 .box3 {
     background-color: rgb(93, 216, 93);
     width: 120px;
     height: 120px;
-    animation-name:box3;  
-    animation-duration: 2s; 
+    animation-name: box3;
+    animation-duration: 2s;
     animation: box3 2s ease 0.3s infinite;
 }
-section{
-    font-size: 45px;
-    color:white;
-    background-color: rgb(58, 88, 209) ;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-@keyframes box1{
-    0%{
-   transform: translateX(0%);
-   
+/* .box3::before {
+    content: "";
+    width: 50px;
+    height: 50px;
+    background-color: saddlebrown;
+    display: block;
+    position: absolute;
+} */
+
+@keyframes box1 {
+    0% {
+        transform: translateX(0%);
     }
-    100%{
-  transform: translateX(+20%);
-    }
-}
-@keyframes box2{
-    0%{
-   transform:rotate(0deg)
-   
-    }
-    100%{
-  transform:rotate(-50deg)
-    }
-}
-@keyframes box3{
-    0%{
-   transform: translate(0px,0px);
-   
-    }
-    100%{
-    transform: translate(20px,20px);
+    100% {
+        transform: translateX(+20%);
     }
 }
 
+@keyframes box2 {
+    0% {
+        transform: rotate(0deg)
+    }
+    100% {
+        transform: rotate(-50deg)
+    }
+}
 
+@keyframes box3 {
+    0% {
+        transform: translate(0px, 0px);
+    }
+    100% {
+        transform: translate(20px, 20px);
+    }
+}
 
+@media (min-width:700px) and (max-width:800px) {
+    .container {
+        width: 100vw;
+        background-color: rgb(228, 120, 19);
+    }
+}
 
-
-
-
-
+@media (min-width:650px) and (max-width:68 0px) {
+    .box1 {
+        display: none;
+    }
+}
