--- a/HTML/lesson20/style.css
+++ b/HTML/lesson20/style.css
@@ -23,15 +23,12 @@ p {
     margin: 0 0 10px;
 }
 
-
 .container {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
 }
-
-
 
 
 .header {
@@ -52,8 +49,6 @@ p {
 
     border-bottom: 1px solid #515369;
 }
-
-
 
 
 .nav {
@@ -82,8 +77,6 @@ p {
 }
 
 
-
-
 .intro {
     display: flex;
     flex-direction: column;
@@ -92,6 +85,7 @@ p {
     padding-top: 100px;
 
     background: #31344e url("img/intro-bg.jpg") center no-repeat;
+    background-size: cover;
 }
 
 .intro__inner {
@@ -122,8 +116,6 @@ p {
     font-weight: 400;
 }
 
-
-
 .btn {
     display: inline-block;
     vertical-align: top;
@@ -139,6 +131,7 @@ p {
     font-weight: 600;
     text-transform: uppercase;
     text-decoration: none;
+    text-align: center;
 
     transition: background .1s linear;
 }
@@ -151,6 +144,9 @@ p {
     background-color: #dd3434;
 }
 
+.btn--long {
+    min-width: 280px;
+}
 
 .features {
     display: flex;
@@ -185,8 +181,6 @@ p {
     color: #6c7279;
 }
 
-
-
 .works {
     display: flex;
     flex-wrap: wrap;
@@ -208,6 +202,8 @@ p {
 }
 
 .works__photo {
+    min-width: 100%;
+
     position: absolute;
     top: 50%;
     left: 50%;
@@ -249,9 +245,6 @@ p {
     font-size: 14px;
     color: #fff;
 }
-
-
-
 
 
 .team {
@@ -301,9 +294,12 @@ p {
 }
 
 
-
 .social {
     display: flex;
+}
+
+.social--footer {
+    justify-content: center;
 }
 
 .social__item {
@@ -328,6 +324,17 @@ p {
     fill: #000;
 }
 
+.social--footer .social__item {
+    background-color: transparent;
+    border-width: 2px;
+    border-color: #fff;
+    border-radius: 2px;
+}
+
+.social--footer .social__item:hover {
+    background-color: #fff;
+}
+
 .social__icon {
     display: block;
     height: 18px;
@@ -335,6 +342,10 @@ p {
     fill: #c6cacc;
 
     transition: fill .1s linear;
+}
+
+.social--footer .social__icon {
+    fill: #fff;
 }
 
 
@@ -387,6 +398,286 @@ p {
     text-transform: uppercase;
     color: #fff;
 }
+
+
+.download {
+    margin: 90px 0;
+
+    text-align: center;
+}
+
+.download__title {
+    margin-bottom: 10px;
+
+    font-size: 28px;
+    color: #2d3033;
+    font-weight: 300;
+}
+
+.download__text {
+    margin-bottom: 30px;
+
+    font-size: 13px;
+    color: #2d3033;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+
+.footer {
+    background-color: #3a3e64;
+}
+
+.footer__inner {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 70px 0;
+}
+
+.footer__block {
+    width: 33.33333%;
+    padding: 0 15px;
+
+    text-align: center;
+}
+
+.footer__title {
+    margin-bottom: 10px;
+
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.footer__address {
+    font-size: 14px;
+    line-height: 1.5;
+    font-style: normal;
+    color: rgba(255, 255, 255, .5);
+}
+
+.footer__text {
+    font-size: 14px;
+    line-height: 1.5;
+    color: rgba(255, 255, 255, .5);
+}
+
+
+.copyright {
+    padding: 20px 0;
+
+    background-color: #313454;
+}
+
+.copyright__text {
+    text-align: center;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #808080;
+}
+
+.copyright__text span {
+    color: #fff;
+}
+
+
+.burger {
+    display: none;
+    padding: 9px 2px;
+
+    background: none;
+    border: 0;
+    cursor: pointer;
+}
+
+.burger__item {
+    display: block;
+    width: 28px;
+    height: 3px;
+
+    background-color: #fff;
+
+    font-size: 0;
+    color: transparent;
+
+    position: relative;
+}
+
+.burger__item:before,
+.burger__item:after {
+    content: "";
+    height: 100%;
+
+    background-color: #fff;
+
+    position: absolute;
+    right: 0;
+    z-index: 1;
+}
+
+.burger__item:before {
+    width: 30px;
+    top: -8px;
+}
+
+.burger__item:after {
+    width: 26px;
+    bottom: -8px;
+}
+
+@media (max-width: 1300px) {
+    
+    .works__item {
+        width: 50%;
+    }
+}
+
+@media (max-width: 991px) {
+
+    
+    .nav {
+        display: none;
+    }
+
+    
+    .burger {
+        display: block;
+    }
+
+    
+    .intro__title {
+        font-size: 40px;
+    }
+
+   
+    .features__item {
+        width: 50%;
+    }
+
+    
+    .team__item {
+        width: 50%;
+
+        text-align: center;
+    }
+
+    .team__photo {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+   
+    .social {
+        justify-content: center;
+    }
+
+    
+    .reviews__photo {
+        width: 100%;
+        margin: 15px 0 40px;
+        overflow: hidden;
+    }
+
+    .reviews__content {
+        width: 100%;
+        padding-left: 0;
+        padding-bottom: 40px;
+    }
+}
+
+
+@media (max-width: 767px) {
+
+    
+    .intro {
+        height: auto;
+        padding-top: 130px;
+        padding-bottom: 30px;
+    }
+
+    .intro__title {
+        font-size: 30px;
+    }
+
+    .intro__subtitle {
+        margin-bottom: 30px;
+
+        font-size: 16px;
+    }
+
+    
+    .features {
+        margin: 40px 0;
+    }
+
+    .features__item {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    
+    .works__item {
+        width: 100%;
+        height: 300px;
+    }
+
+    
+    .team {
+        margin: 60px 0 30px;
+    }
+
+    .team__item {
+        width: 100%;
+    }
+
+    
+    .reviews__text {
+        font-size: 25px;
+    }
+
+    
+    .btn--long {
+        min-width: 260px;
+    }
+
+    
+    .download {
+        margin: 50px 0;
+    }
+
+    .download__title {
+        font-size: 24px;
+    }
+
+    
+    .footer__inner {
+        padding: 30px 0;
+    }
+
+    .footer__block {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+        margin-bottom: 30px;
+    }
+
+    .footer__block:last-child {
+        margin-bottom: 0;
+    }
+}
+
+
+@media (max-width: 414px) {
+
+    .reviews__img {
+        right: -100px;
+    }
+}
+
+
+
 
 
 
