--- a/HTML/eksperiment/norsayt1/style.css
+++ b/HTML/eksperiment/norsayt1/style.css
@@ -28,8 +28,9 @@ p{
 
 .container{
     width: 100%;
-    max-width: 1170px;
+    max-width: 1200px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 .header__inner{
     display: flex;
@@ -258,4 +259,37 @@ animation: animate 15s linear forwards; */
     100% {
       transform: scale(0.5, 0.5);
     }
+  }
+
+  .team{
+      margin: 100px 0 70px;
+  }
+  
+  .team__inner{
+      display: flex;
+      flex-wrap: wrap;
+      /* margin: 0 -15px; */
+  }
+
+  .team__item{
+      width: 25%;
+      padding: 0 15px;
+      margin-bottom: 30px;
+  }
+  .team__foto{
+      display: block;
+      min-width: 100%;
+      height: auto;
+      margin-bottom: 20px;
+  }
+  .team__name{
+      margin-bottom: 8px;
+      font-size: 22px;
+      color: black;
+
+  }
+  .team__text{
+      font-size: 14px;
+      line-height: 1.5;
+      color: #6c7279;
   }
