--- a/HTML/eksperiment/norsayt1/style.css
+++ b/HTML/eksperiment/norsayt1/style.css
@@ -48,7 +48,7 @@ p {
     padding-top: 100px;
     height: 720px;
     background: yellow url("img/intro-bg.jpg.jpg") center no-repeat;
-    background-size: 1100px;
+    background-size: 1300px;
     background-attachment: fixed;
     /* transition:background-color 2s ease;
     animation: anime 4s linear infinite; */
@@ -203,7 +203,7 @@ p {
     z-index: 2;
     background-color: rgba(232, 69, 69, 0.9);
     transition: opacity .2s linear;
-    */
+    
 }
 
 .works__title {
@@ -263,7 +263,20 @@ animation: animate 15s linear forwards; */
 }
 
 .team__text {
+    margin-bottom: 20px;
     font-size: 14px;
     line-height: 1.5;
     color: #6c7279;
+}
+.social{
+    display: flex;
+}
+.social__item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border: 1px solid #e8ecee;
+    margin-right: 4px;
 }
