--- a/HTML/eksperiment/norsayt2/style.css
+++ b/HTML/eksperiment/norsayt2/style.css
@@ -1,39 +1,48 @@
-body{
-    margin: 0;
-    font-family: 'Montserrat',sans-serif;
-
+* {
+    box-sizing: border-box;
 }
-.header{
+
+body {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    color: #000;
+    font-weight: 500;
+}
+
+.header {
     width: 100%;
     height: 900px;
     background-color: #ccdef0;
     background-image: radial-gradient(circle 675px at center, #ffffff 0%, #ccdef0 100%);
 }
- .container{
-     width: 1170px;
-     margin-right: auto;
-     margin-left: auto;
-                            
- }
-.nav-wrapper{
+
+.container {
+    width: 1170px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.nav-wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding-top: 70px;
+    margin-bottom: 90px;
 }
 
-.logo{
+.logo {
     font-size: 28px;
     font-weight: 900;
     line-height: 1;
     color: #000000;
 }
 
-.logo span{
+.logo span {
     color: #5abb33;
 }
-.nav{
+
+.nav {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -41,21 +50,66 @@ body{
     flex-direction: row;
 }
 
-.nav__item{
-margin-right: 50px;
+.nav__item {
+    margin-right: 50px;
 }
-.nav__item:last-child{
+
+.nav__item:last-child {
     margin: 0;
 }
 
-.nav__link{
-color: black;
-text-decoration: none;
-font-size: 18px;
-font-weight: 500;
-line-height: 1;
+.nav__link {
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1;
 }
 
-.nav__link:hover{
+.nav__link:hover {
     text-decoration: underline;
+}
+
+.header-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.header-desc {
+    width: 500px;
+}
+
+.header__title {
+    font-size: 48px;
+    font-weight: 800;
+    line-height: 1.3;
+    margin-bottom: 35px;
+    margin: 0;
+}
+
+.header__text {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.7;
+    margin-bottom: 35px;
+}
+
+.header__btn {
+    display: inline-block;
+    height: 65px;
+    padding-left: 35px;
+    padding-right: 35px;
+    border-radius: 33px;
+    background-color: #fadb60;
+    background-image: linear-gradient(to top, #ffcc00 0%, #fadb60 100%);
+    color: #000;
+    font-size: 24px;
+    font-weight: 700;
+    text-decoration: none;
+    line-height: 65px;
+}
+
+.header-photo {
+    width: 670px;
 }
