--- a/HTML/eksperiment/norsayt2/style.css
+++ b/HTML/eksperiment/norsayt2/style.css
@@ -78,6 +78,7 @@ body {
 
 .header-desc {
     width: 500px;
+    padding-top: 90px;
 }
 
 .header__title {
@@ -112,4 +113,22 @@ body {
 
 .header-photo {
     width: 670px;
+    margin-left: 50px;
+}
+
+.header-social {}
+
+.header__social-item {
+    font-size: 27px;
+    color: #34383c;
+    text-decoration: none;
+    margin-right: 30px;
+}
+
+.header__social-item:last-child {
+    margin-right: 0;
+}
+
+.header__social-item:hover {
+    opacity: 0.8;
 }
