--- a/HTML/eksperiment/Slayder/style.css
+++ b/HTML/eksperiment/Slayder/style.css
@@ -4,7 +4,8 @@
 }
 
 body {
-    background-color: black;
+    background: url("img/kanada.jpg") no-repeat center center fixed;
+    background-size: cover;
 }
 
 .slider {
@@ -24,7 +25,7 @@ body {
 .navigation {
     position: absolute;
     bottom: 16px;
-    left: 50px;
+    left: 50%;
     transform: translateX(-50%);
     display: flex;
 }
@@ -35,17 +36,58 @@ body {
     margin: 6px;
     cursor: pointer;
     background-color: #ddd;
-    opacity: .5;
+    opacity: .7;
     border-radius: 10px;
     transition: all .4s ease;
 }
 
 .bar:hover {
-    opacity: 0.8;
+    opacity: 1;
     transform: scale(1.1);
 }
 
 input[name="r"] {
     position: absolute;
     visibility: hidden;
+}
+
+.slides {
+    width: 400%;
+    height: 100%;
+    display: flex;
+}
+
+.slide {
+    width: 25%;
+    transition: all .6s ease;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+}
+
+#r1:checked~.s1 {
+    margin-left: 0;
+}
+
+#r2:checked~.s1 {
+    margin-left: -25%;
+}
+
+#r3:checked~.s1 {
+    margin-left: -50%;
+}
+
+#r4:checked~.s1 {
+    margin-left: -75%;
+}
+
+.row {
+    display: inline-flex;
+    --width: 50px;
+}
+
+.row:nth-of-type(even) {
+    transform: translateX(calc(var(--width) * -1));
 }
