--- a/HTML/eksperiment/Slayder/style.css
+++ b/HTML/eksperiment/Slayder/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background: url("img/kanada.jpg") no-repeat center center fixed;
+    background: url("img/3qjr.gif") no-repeat center center fixed;
     background-size: cover;
 }
 
