--- a/HTML/eksperiment/norsayt1/style.css
+++ b/HTML/eksperiment/norsayt1/style.css
@@ -182,11 +182,9 @@ p {
 }
 
 .works__photo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    transform: rotate3d(-50%, -50%, 0);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .works__content {
