--- a/Javascript/12/style.css
+++ b/Javascript/12/style.css
@@ -32,6 +32,39 @@ body{
     height: 150px;
     z-index: 1;
 }
+.blok4{
+    position: absolute;
+    top: 450px;
+    left: 500px;
+    z-index: 1;
+    font-size: 30px;
+}
+.blok5{
+    position: absolute;
+    top: 520px;
+    left: 100px;
+    z-index: 1;
+    height: 150px;
+    width: 150px;
+   
+}
+.blok6{
+    position: absolute;
+    top: 520px;
+    left: 1000px;
+    z-index: 1;
+    height: 150px;
+    width: 150px;
+}
+.blok7{
+    position: absolute;
+    top: 520px;
+    left: 570px;
+    z-index: 1;
+    height: 150px;
+    width: 150px;
+    animation: go-left-right 3s infinite alternate;
+}
 
 button{
     background-color: red;
@@ -73,9 +106,6 @@ span{
 		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 	}
 }
-
-
-
 
 .header {
     height: 100px;
@@ -126,3 +156,36 @@ p{
         opacity: 0;
     }
 }
+
+.images2{
+    width: 100%;
+    height: 100%;
+    transition: 1s;
+}
+.images3{
+    width: 100%;
+    height: 100%;
+    transition: 1s;
+}
+.images4{
+    width: 100%;
+    height: 100%;
+}
+
+@keyframes go-left-right {
+    from {
+      left: 20%;               /* от: left: 0px */
+    }
+    to {
+      left: calc(60% - 20px); /* до: left: 100%-50px */
+    }
+  }
+
+  .images2:hover{
+    transform: scale(1.8);
+  }
+  .images3:hover{
+      transform: scale(1.8);
+  }
+  
+  
